# Algorithms

./: README.md  pyproject.toml
notebooks/: Optiver.ipynb  binary_search.ipynb  infinite.ipynb  infinite_II.ipynb  mathematical_exp.ipynb  palindromes.ipynb  smaller_digit.ipynb  string_matcher.ipynb  tictactoe.ipynb  webscraper.ipynb
src/: digital_root.py  interlockable.py  masked.py  move_zeros.py  stringExpansion.py
