[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
tqdm = "^4.65.0"
scrapy = "^2.9.0"
w3lib = "^2.1.1"
seaborn = "^0.12.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
